# SeqMetrics

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: coding_regions.fasta
helpers/: hg19-tRNAs-confidence-set.out  tissue_codon_usage.tsv
results/: seqmetrics_results.tsv
seqmetrics/: Analysis.ipynb  __init__.py  cli.py  codon_definitions.py  codon_metrics.py  codon_tables.py  codon_usage.py  io.py  protein_metrics.py  sequence_analyzer.py  sequences.py  trna_weights.py
tests/: test_cli.py  test_sequence_analyzer.py
